--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "money",
+  "name": "7money",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.12.0",
+    "register-service-worker": "^1.6.2",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
